# thetagang-notifications

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-pre-poetry  LICENSE  Makefile  README.md  README.rst  make_notification.py  notify.py  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  run_earnings  run_trades  run_trades.py  run_trends  setup.cfg  setup.py  tox.ini
.claude/: CLAUDE.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: claude-code-review.yml  claude.yml  main.yml  pysa.yml  run_tests.yml  run_trade_bot.yml  update_image.yml
src/thetagang_notifications/: config.py  models.py  notification.py  strategies.py  strategy_factory.py  trade.py  trade_math.py  trade_queue.py
src/thetagang_notifications/exceptions/: __init__.py
tests/: __init__.py  conftest.py  test_earnings.py  test_notification.py  test_thetaget.py  test_thetaget_v2.py  test_trade.py  test_trade_math.py  test_trade_queue.py  test_trades.py  test_trends.py  test_utils.py
tests/assets/: amd_yahoo_finance.json  finviz-amd.json  finviz-soxl.json  trade-buy-common-stock.json  trade-call-credit-spread.json  trade-cash-secured-put.json  trade-covered-call.json  trade-long-naked-put.json  trade-put-credit-spread.json  trade-sell-common-stock.json  trade-short-iron-condor.json  trade-short-naked-call.json  trades-example.json
tests/cassettes/: test_above_consensus_tweet.yaml  test_assigned_option.yaml  test_below_consensus_tweet.yaml  test_buy_common_stock.yaml  test_cash_secured_put.yaml  test_closed_cash_secured_put.yaml  test_closed_cash_secured_put_loss.yaml  test_closed_description_assigned.yaml  test_closed_description_loss.yaml  test_closed_description_profit.yaml  test_covered_call.yaml  test_download_trades.yaml  test_download_trends.yaml  test_earnings_no_finviz.yaml  test_get_finviz_stock_equity.yaml  test_get_finviz_stock_etf.yaml  test_get_logo_clearbit.yaml  test_get_profiles.yaml  test_get_single_trade.yaml  test_get_trade_screenshot.yaml  test_get_trades_for_user.yaml  test_get_trades_generic.yaml  test_junk_tweet.yaml  test_met_consensus_tweet.yaml  test_negative_consensus_tweet.yaml  test_non_patron_trade.yaml  test_put_credit_spread.yaml  test_short_iron_condor.yaml  test_stats_single_leg_invalid.yaml  test_trades_main.yaml  test_trending_ticker.yaml  test_trending_ticker_no_finviz.yaml  test_trends_main.yaml  test_unknown_consensus_tweet.yaml
tests/cassettes/test_notification/: test_notify_live[CASH SECURED PUT].yaml
tests/cassettes/test_trades/: test_dte.yaml  test_guid.yaml  test_is_assigned.yaml  test_is_closed.yaml  test_is_multiple_leg.yaml  test_is_option_trade.yaml  test_is_short.yaml  test_is_single_leg.yaml  test_is_winner.yaml  test_note.yaml  test_parse_expiration.yaml  test_pretty_expiration.yaml  test_pretty_expiration_far_away.yaml  test_pretty_expiration_invalid.yaml  test_pretty_premium.yaml  test_quantity.yaml  test_raw_strikes.yaml  test_short_return.yaml  test_short_return_annualized.yaml  test_status.yaml  test_strike.yaml  test_symbol.yaml  test_trade_url.yaml  test_username.yaml
tests/cassettes/test_utils/: TestUtils.test_get_logo_clearbit.yaml  TestUtils.test_get_stock_logo.yaml  TestUtils.test_get_stock_logo_failure.yaml  test_get_finviz_stock_equity.yaml  test_get_finviz_stock_etf.yaml  test_get_finviz_stock_failure.yaml  test_get_finviz_stock_missing_website.yaml  test_get_logo_clearbit.yaml  test_get_stock_logo.yaml  test_get_stock_logo_failure.yaml
tests/fixtures/trades/: BUTTERFLY_CALL_DEBIT_SPREAD.yaml  BUY_COMMON_STOCK.yaml  CALL_CREDIT_SPREAD.yaml  CALL_DEBIT_SPREAD.yaml  CASH SECURED PUT.yaml  CASH_SECURED_PUT.yaml  COVERED_CALL.yaml  JADE_LIZARD.yaml  LONG_CALL.yaml  LONG_NAKED_CALL.yaml  LONG_NAKED_PUT.yaml  LONG_PUT.yaml  LONG_STRADDLE.yaml  LONG_STRANGLE.yaml  PUT_CREDIT_SPREAD.yaml  PUT_DEBIT_SPREAD.yaml  SELL_COMMON_STOCK.yaml  SHORT_IRON_BUTTERFLY.yaml  SHORT_IRON_CONDOR.yaml  SHORT_NAKED_CALL.yaml  SHORT_STRADDLE.yaml  SHORT_STRANGLE.yaml  cash_secured_put.yaml
thetagang_notifications/: __init__.py  auth.py  config.py  earnings.py  notification.py  thetaget.py  thetaget_v2.py  trade.py  trade_math.py  trade_queue.py  trades.py  trends.py  utils.py
thetagang_notifications/assets/: trade_specs.yml
thetagang_notifications/exceptions/: __init__.py
