[tool.poetry]
    name = "thetagang-notifications"
    version = "1.2.1"
    description = "Notifications for the Theta Gang discord."
    authors = ["Major Hayden <major@mhtx.net>"]
    license = "Apache 2.0"

    [tool.poetry.dependencies]
        python = ">=3.12,<4.0"
        discord-webhook = "^1.3.1"
        python-dateutil = "^2.9.0.post0"
        PyYAML = "^6.0.2"
        schedule = "^1.2.2"
        inflect = "^7.4.0"
        sentry-sdk = "^2.18.0"
        redis = "^5.2.0"
        httpx = "^0.28.0"

    [tool.poetry.group.dev.dependencies]
        freezegun = "^1.5.1"
        pytest = "^8.3.3"
        pytest-clarity = "^1.0.1"
        pytest-mock = "^3.14.0"
        pytest-randomly = "^3.16.0"
        ipython = "^8.29.0"
        pytest-cov = "^6.0.0"
        pytest-sugar = "^1.0.0"
        deptry = "^0.21.0"
        mypy = "^1.13.0"
        ruff = "^0.7.0"
        pre-commit = "^4.0.1"
        tox = "^4.23.2"
        pytest-recording = "^0.13.0"
        vcrpy = "^6.0.2"
        fakeredis = "^2.26.1"
        types-redis = "^4.6.0.20241004"
        pytest-xdist = "^3.6.1"
        coverage = { extras = ["toml"], version = "^7.6.7" }
        types-python-dateutil = "^2.9.0.20241003"
        types-pyyaml = "^6.0.12.20240917"

[build-system]
    requires = ["poetry-core>=1.5.0"]
    build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
    testpaths = ["tests"]

[tool.mypy]
    files = ["thetagang_notifications"]
    disallow_untyped_defs = "True"
    disallow_any_unimported = "True"
    no_implicit_optional = "True"
    check_untyped_defs = "True"
    warn_return_any = "True"
    warn_unused_ignores = "True"
    show_error_codes = "True"

[tool.ruff]
    target-version = "py37"
    line-length = 120
    fix = true
    select = [
        # flake8-2020
        "YTT",
        # flake8-bandit
        "S",
        # flake8-bugbear
        "B",
        # flake8-builtins
        "A",
        # flake8-comprehensions
        "C4",
        # flake8-debugger
        "T10",
        # flake8-simplify
        "SIM",
        # isort
        "I",
        # mccabe
        "C90",
        # pycodestyle
        "E",
        "W",
        # pyflakes
        "F",
        # pygrep-hooks
        "PGH",
        # pyupgrade
        "UP",
        # ruff
        "RUF",
        # tryceratops
        "TRY",
    ]
    ignore = [
        # LineTooLong
        "E501",
        # DoNotAssignLambda
        "E731",
    ]

    [tool.ruff.format]
        preview = true

    [tool.ruff.per-file-ignores]
        "tests/*" = ["S101"]

    [tool.coverage.report]
        skip_empty = true

                                [tool.coverage.run]
        branch = true
        source = ["thetagang_notifications"]
